<resources>
    <string name="app_name">P003_widgets</string>
    <string name="app_description">Widgets</string>
    <string name="start">Start</string>
    <string name="back">Prev</string>
    <string name="next">Next</string>
    <string name="cb_toggle_on">CheckBox is Checked</string>
    <string name="cb_toggle_off">CheckBox is Unchecked</string>
    <string name="rg_horizontal">Horizontal</string>
    <string name="rg_vertical">Vertical</string>
    <string name="rg_left">Left</string>
    <string name="rg_center">Center</string>
    <string name="rg_right">Right</string>
    <string name="tb_description">Table</string>
    <string name="tb_name">Name:</string>
    <string name="tb_send">Send</string>
    <string name="tb_reset">Reset</string>
</resources>
